--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/Jerrywx">View on GitHub</a>
 
-          <h1 id="project_title">Jerrywx.GitHub.io</h1>
-          <h2 id="project_tagline">Jerrywx 的博客</h2>
+          <h1 id="project_title">Jerrywx</h1>
+          <h2 id="project_tagline">Jerry 的博客</h2>
 
         </header>
     </div>
