--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
           <h1 id="project_title">Jerrywx</h1>
           <h2 id="project_tagline">Jerry 的博客</h2>
-
+          
         </header>
     </div>
 
@@ -31,9 +31,10 @@
 <a id="jerrywxgithubio" class="anchor" href="#jerrywxgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Jerrywx.github.io</h1>
 
 <p>Jerrywx 的博客</p>
+<a href="./web/html.html">HTML</a>
       </section>
     </div>
-
+    
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
