添加APP跳转测试文件入口

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <a id="jerrywxgithubio" class="anchor" href="#jerrywxgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Jerrywx.github.io</h1>
 
 <p>Jerrywx 的博客</p>
-<a href="./web/html.html">HTML</a>
+      <a href="./web/html.html">HTML</a>
+      <a href="./open.html">打开App跳转测试文件</a>
       </section>
     </div>
     
