--- a/open.html
+++ b/open.html
@@ -5,8 +5,11 @@
 	<body>
 		
 		<br><br><br><br>
-		<a href="zongheng://thread?forumId:1234&thread:321">打开</a>
-		
+
+		<!-- id = 184456; -->
+		<!-- forumsId = 24; -->
+		<a href="zongheng://thread?forumId=24&thread=184456">打开</a>
+		<!-- //	ZHFLastPageView *lastView = [[ZHFLastPageView alloc] initWithBookId:@"158432" lastCategoryId:@"22856351" module:NO]; -->
 <!--		https://itunes.apple.com/us/app/qq/id444934666?mt=8 -->
 	<h2><a id="applink1" href="zongheng://timeLine?news">Open scheme(mtcmtc) defined in iPhone with parameters </a></h2>
 		<!-- <h2><a id="applink1" href="zongheng://profile/116201417">Open scheme(mtcmtc) defined in iPhone with parameters </a></h2> -->
