--- a/open.html
+++ b/open.html
@@ -8,7 +8,7 @@
 
 		<!-- id = 184456; -->
 		<!-- forumsId = 24; -->
-		<a href="zongheng://thread?forumId=24&thread=184456">打开</a>
+		<a href="zongheng://thread?forumId=24&threadId=184456">打开</a>
 		<!-- //	ZHFLastPageView *lastView = [[ZHFLastPageView alloc] initWithBookId:@"158432" lastCategoryId:@"22856351" module:NO]; -->
 <!--		https://itunes.apple.com/us/app/qq/id444934666?mt=8 -->
 	<h2><a id="applink1" href="zongheng://timeLine?news">Open scheme(mtcmtc) defined in iPhone with parameters </a></h2>
