--- a/open.html
+++ b/open.html
@@ -11,7 +11,7 @@
 		<a href="zongheng://thread?forumId=24&threadId=184456">打开</a>
 		<!-- //	ZHFLastPageView *lastView = [[ZHFLastPageView alloc] initWithBookId:@"158432" lastCategoryId:@"22856351" module:NO]; -->
 <!--		https://itunes.apple.com/us/app/qq/id444934666?mt=8 -->
-	<h2><a id="applink1" href="zongheng://timeLine?news">Open scheme(mtcmtc) defined in iPhone with parameters </a></h2>
+	<h2><a id="applink1" href="zongheng://thread?forumId=24&threadId=184456">打开纵横应用 处理未安装情况 </a></h2>
 		<!-- <h2><a id="applink1" href="zongheng://profile/116201417">Open scheme(mtcmtc) defined in iPhone with parameters </a></h2> -->
 		<h2><a id="applink2" href="zongheng://timeLine?news">open unknown with fallback to appstore</a></h2>
 		<p><i>Only works on iPhone!</i></p>
