--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <!--</footer>-->
     <!--</div>-->
 
-    https://book.xmkanshu.com/app?actionkey=PandaReader%3A%2F%2Faction%2Fbookdetail%3FbookId%3D470534031
+    <a href="https://book.xmkanshu.com/app?actionkey=PandaReader%3A%2F%2Faction%2Fbookdetail%3FbookId%3D470534031" class="radio">我是一个链接</a>
+    
 
   </body>
 </html>
