--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!--</footer>-->
     <!--</div>-->
 
-    <a href="https://book.xmkanshu.com/app?actionkey=PandaReader%3A%2F%2Faction%2Fbookdetail%3FbookId%3D470534031" class="radio">我是一个链接</a>
+    <a href="https://book.xmkanshu.com/app?a=a" class="radio">我是一个链接</a>
     
 
   </body>
