--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!--</div>-->
 
     <a href="https://book.xmkanshu.com/app?a=a" class="radio">22我是一个链接</a>
-    
+    <a href="./ff.htm">吧哈哈哈哈</a>
 
   </body>
 </html>
