--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <!--</footer>-->
     <!--</div>-->
 
-    <a href="https://book.xmkanshu.com/app?a=a" class="radio">22我是一个链接</a>
+    <a href="https://book.xmkanshu.com/app?actionkey=PandaReader://action/bookdetail?bookId=470534031" class="radio">22我是一个链接</a>
     <a href="./ff.htm">吧哈哈哈哈</a>
 
   </body>
