--- a/index.html
+++ b/index.html
@@ -2,67 +2,42 @@
 <html>
 
   <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Jerrywx.GitHub.io : Jerrywx 的博客">
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Bootstrap 实例</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">  
+  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Jerrywx.GitHub.io</title>
-
-      <style>
-
-          body {
-              background-color: white;
-          }
-
-          .left {
-              width: 300px;
-              float: left;
-              background-color: #222;
-              height: 800px;
-          }
-
-          .content {
-              height: 800px;
-              background-color: gray;
-          }
-
-
-      </style>
-
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <!--<div id="header_wrap" class="header">-->
-
-    <!--</div>-->
-
-    <!-- LEFT -->
-    <div class="left">
-
-
+<div class="container">
+  <div class="jumbotron">
+    <h1>我的第一个 Bootstrap 页面</h1>
+    <p>重置窗口大小，查看响应式效果！</p> 
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>第一列</h3>
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
     </div>
-
-
-    <!-- MAIN CONTENT -->
-    <div class="content">
-        <!--<p>AAAsasdasdassadasdasda..........a.sdasdasdasd..as.dasdas.....</p>-->
-
-        <a href="./web/nav.html">Nav</a>
+    <div class="col-sm-4">
+      <h3>第二列</h3>
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
     </div>
-    
-    <!-- FOOTER  -->
-    <!--<div id="footer_wrap" class="outer">-->
-      <!--<footer class="inner">-->
-        <!--<p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>-->
-      <!--</footer>-->
-    <!--</div>-->
+    <div class="col-sm-4">
+      <h3>第三列</h3>        
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
+    </div>
+  </div>
+</div>
 
-    <a href="https://book.xmkanshu.com/app?actionkey=PandaReader://action/bookdetail?bookId=470534031" class="radio">22我是一个链接</a>
-    <a href="./ff.htm">吧哈哈哈哈</a>
-
-  </body>
+</body>
 </html>
+
