--- a/index.html
+++ b/index.html
@@ -1,88 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Storm</title>
+  <title>Bootstrap 实例</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">  
+  <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="shortcut icon" href="favicon.ico">
+<!-- 新 Bootstrap 核心 CSS 文件 -->
+<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+ 
+<!-- 可选的Bootstrap主题文件（一般不使用） -->
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"></script>
+ 
+<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+ 
+<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
 
-<!-- 顶部导航 START-->
-<div class="header-line">
-    <div class="w header-content">
-        <h3 class="header-left">STORM</h3>
-        <h3 class="header-right">ADDITIONAL DC SITES</h3>
+<div class="container">
+  <div class="jumbotron">
+    <h1>我的第一个 Bootstrap 页面</h1>
+    <p>重置窗口大小，查看响应式效果！</p> 
+  </div>
+  <div class="row">
+    <div class="col-sm-4">
+      <h3>第一列</h3>
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
     </div>
+    <div class="col-sm-4">
+      <h3>第二列</h3>
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
+    </div>
+    <div class="col-sm-4">
+      <h3>第三列</h3>        
+      <p>学的不仅是技术，更是梦想！</p>
+      <p>再牛逼的梦想,也抵不住你傻逼似的坚持！</p>
+    </div>
+  </div>
 </div>
-
-<div class="header-nav">
-
-    <div class="w">
-        <div class="nav-left">
-
-        </div>
-
-        <div class="nav-right">
-
-        </div>
-    </div>
-
-</div>
-
-
-<!-- 顶部导航 END-->
-
-
-<!-- Banner Start -->
-
-<div class="banner w">
-
-    <div class="left-Slide">
-        <img src="images/banner.jpg">
-    </div>
-
-    <div class="suggest">
-        <div class="suggest-top">
-            <img src="images/s1.jpg">
-        </div>
-
-        <div class="suggest-bom">
-            <img src="images/s2.jpg">
-        </div>
-    </div>
-
-</div>
-
-<!-- Banner End -->
-
-
-<!-- Hot Staet -->
-
-<div class="hot w">
-
-    <div class="hot-title">
-        <span>CERTIFIED FRESH PICKS</span>
-    </div>
-
-    <div class="hot-movies">
-        <ul>
-            <li>AAA</li>
-            <li>DSSD</li>
-            <li>asds</li>
-            <li>asd</li>
-            <li>asd</li>
-            <li>sa</li>
-        </ul>
-    </div>
-
-</div>
-
-<!-- Hot End -->
-
 
 </body>
 </html>
